# [package]
# authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
# description = 'FRAME pallet template for defining custom runtime logic.'
# edition = '2018'
# homepage = 'https://substrate.dev'
# license = 'Unlicense'
# name = 'pallet-template'
# publish = false
# readme = 'README.md'
# repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
# version = '3.0.0-monthly-2021-09+1'

# [package.metadata.docs.rs]
# targets = ['x86_64-unknown-linux-gnu']

# [dev-dependencies.sp-core]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-09+1'
# version = '4.0.0-dev'

# [dev-dependencies.sp-io]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-09+1'
# version = '4.0.0-dev'

# [dev-dependencies.sp-runtime]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-09+1'
# version = '4.0.0-dev'

# [dependencies.codec]
# default-features = false
# features = ['derive']
# package = 'parity-scale-codec'
# version = '2.0.0'

# [dependencies.frame-benchmarking]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# optional = true
# tag = 'monthly-2021-09+1'
# version = '4.0.0-dev'

# [dependencies.frame-support]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-09+1'
# version = '4.0.0-dev'

# [dependencies.frame-system]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-09+1'
# version = '4.0.0-dev'

# [features]
# default = ['std']
# runtime-benchmarks = ['frame-benchmarking']
# std = [
#     'codec/std',
#     'frame-support/std',
#     'frame-system/std',
#     'frame-benchmarking/std',
# ]
# try-runtime = ['frame-support/try-runtime']

[package]
authors = ['Shin Takahashi']
description = 'pallect Faucet for the basic token'
edition = '2018'
homepage = ''
license = 'Unlicense'
name = 'pallet-faucet'
repository = 'https://github.com/realtakahashi/faucet_pallet/tree/8387d75aeca08c4c3f2b47c9ce81f269eaeda948'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# compatibility_version = "2.0.0"

[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], version = '2.0.1' }
parking_lot = "0.10.0"
alt_serde = { version = "=1.0.104", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.44", default-features = false, git = "https://github.com/Xanewok/json", branch = "no-std", features = ["alloc"] }

# Substrate packages

frame-support = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false  }
frame-system = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false  }
sp-core = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false  }
sp-io = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false  }
sp-runtime = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false  }
sp-std = { version = '3.0.0', default-features = false }
chrono = { version = '0.4.19', default-features = false }
rustc-hex = { version="2.1.0", default-features = false }
bs58 = { version = "0.4.0", default-features = false }

pallet-balances = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false  }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
log = "0.4.8"

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'parity-scale-codec/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
	'rustc-hex/std',
	'bs58/std',
	'serde/std',
	'pallet-balances/std',
]
